# bobreview

./: .gitignore  CHANGELOG.md  CORE_API.md  INSTALL.md  LICENSE.md  QUICKSTART.md  README.md  RELEASE_GUIDE.md  REPORT_SYSTEMS_GUIDE.md  ROADMAP.md  V1.0.4_IMPLEMENTATION_SUMMARY.md  bobreview.py  cli_help.txt  generate_performance_report.py  index.html  pyproject.toml  requirements.txt  setup.py
bobreview/: __init__.py  analysis.py  cache.py  chart_registry.py  cli.py  config.py  data_parser.py  llm_provider.py  llm_registry.py  report_generator.py  theme_registry.py  utils.py
bobreview/core/: __init__.py  analysis.py  api.py  cache.py  config.py  config_classes.py  config_utils.py  dataframe.py  html_utils.py  plugin_utils.py  report_builder.py  report_config.py  template_engine.py  theme_system.py  theme_utils.py  themes.py  utils.py
bobreview/core/components/: __init__.py  processor.py  prop_types.py  registry.py  renderer.py
bobreview/core/plugin_system/: __init__.py  discovery.py  interface.py  loader.py  manifest.py  plugin_helper.py  registry.py  scaffolder.py
bobreview/core/plugin_system/registries/: __init__.py  analyzer_registry.py  base_registry.py  chart_type_registry.py  component_registry.py  data_parser_registry.py  page_registry.py  report_system_registry.py  service_registry.py  template_path_registry.py  widget_registry.py
bobreview/core/plugin_system/scaffolder/: __init__.py  core.py
bobreview/core/static/: styles.css
bobreview/engine/: __init__.py  config_merger.py  data_parser_base.py  executor.py  llm_generator_base.py  loader.py  page_generator_base.py  page_renderer.py  parser_factory.py  plugin_lifecycle.py  presets.py  schema.py  service_validator.py
bobreview/gui/: __init__.py  main.py
bobreview/gui/services/: __init__.py  cli_wrapper.py  plugin_loader.py
bobreview/gui/views/: __init__.py  generate.py  llm_settings.py  plugin_create.py  plugin_list.py
bobreview/gui/views/config_editor/: __init__.py  data_reader.py  dialogs.py  expression_helper.py
bobreview/llm/: __init__.py  client.py
bobreview/llm/generators/: __init__.py  executive.py  metrics.py  optimization.py  recommendations.py  stats.py  visuals.py  zones.py
bobreview/llm/providers/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai.py
bobreview/pages/: __init__.py  base.py  homepage.py  metrics.py  optimization.py  stats.py  styles.css  visuals.py  zones.py
bobreview/plugins/: __init__.py  base.py  loader.py  manifest.py  registry.py
bobreview/plugins/core/: __init__.py  manifest.json  plugin.py
bobreview/plugins/core/context/: __init__.py  game_context.py
bobreview/plugins/core/generators/: __init__.py
bobreview/plugins/core/parsers/: __init__.py
bobreview/plugins/core/report_systems/: game_review.json  png_data_points.json
bobreview/plugins/core/templates/: base.html.j2
bobreview/plugins/game-review/: manifest.json  plugin.py
bobreview/plugins/game-review/context/: game_context.py
bobreview/plugins/game-review/generators/: __init__.py  adapters.py  review_text.py
bobreview/plugins/game-review/parsers/: __init__.py  game_config.py
bobreview/plugins/game-review/report_systems/: game_review.json
bobreview/plugins/game-review/templates/: base.html.j2
bobreview/plugins/game_review/: __init__.py  manifest.json  plugin.py
bobreview/plugins/game_review/context/: game_context.py
bobreview/plugins/game_review/generators/: __init__.py  adapters.py  review_text.py
bobreview/plugins/game_review/parsers/: game_config.py
bobreview/plugins/game_review/report_systems/: game_review.json
bobreview/plugins/game_review/templates/: base.html.j2
bobreview/plugins/hello_world/: __init__.py  chart_generator.py  context_builder.py  manifest.json  plugin.py
bobreview/plugins/hello_world/parsers/: __init__.py  csv_parser.py
bobreview/plugins/hello_world/report_systems/: hello_world.json
bobreview/plugins/hello_world/sample_data/: scores.csv
bobreview/plugins/mayhem/: __init__.py  analysis.py  manifest.json  plugin.py  schema.py
bobreview/plugins/mayhem/charts/: __init__.py  performance_charts.py
bobreview/plugins/mayhem/context/: __init__.py  performance_context.py
bobreview/plugins/mayhem/generators/: __init__.py  adapters.py  chart_explanations.py  executive.py  metrics.py  optimization.py  recommendations.py  stats.py  visuals.py  zones.py
bobreview/plugins/mayhem/parsers/: __init__.py  mayhem_parser.py
bobreview/plugins/mayhem/templates/: base.html.j2
bobreview/plugins/mayhem_reports/: __init__.py  analysis.py  chart_generator.py  context_builder.py  manifest.json  plugin.py
bobreview/plugins/registries/: chart_generator_registry.py  context_builder_registry.py  llm_generator_registry.py  service_registry.py  template_path_registry.py  theme_registry.py
bobreview/registry/: __init__.py  charts.py  themes.py
bobreview/report_generator/: __init__.py  base.py  homepage.py  metrics.py  optimization.py  registry.py  stats.py  styles.css  visuals.py  zones.py
bobreview/report_systems/: __init__.py  config_merger.py  data_parser_base.py  executor.py  llm_generator_base.py  loader.py  page_generator_base.py  parser_factory.py  plugin_lifecycle.py  schema.py  service_validator.py
bobreview/report_systems/builtin/: README.md  png_data_points.json
bobreview/services/: __init__.py  analytics_service.py  base.py  chart_service.py  container.py  data_service.py  llm_service.py  pipeline.py
bobreview/services/llm/: __init__.py  client.py
bobreview/templates/: base.html.j2
bobreview/templates/components/: macros.html.j2
bobreview/templates/pages/: homepage.html.j2  metrics.html.j2  optimization.html.j2  stats.html.j2  visuals.html.j2  zones.html.j2
docs/: ARCHITECTURE_PLUGIN_SYSTEM.md  CORE_API.md  PLUGIN_DEVELOPMENT_GUIDE.md  USER_GUIDE.md  V1.0.7_RELEASE_NOTES.md
examples/: report_config.yaml
examples/game_review/: game.json
examples/plugins/hello_world/: __init__.py  manifest.json  plugin.py
tests/: conftest.py
tests/unit/core/: test_scaffolder_generators.py  test_theme_system.py  test_themes.py
(+50 files in other folders)
