[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bobreview"
version = "1.0.7"
description = "Performance Analysis and Review Tool for Game Development"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["performance", "analysis", "game", "development", "profiling", "reports"]
authors = [
    {name = "Siva Vadlamani"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["dependencies"]

# Dependencies are read from requirements.txt by setup.py
# This is the single source of truth for all dependencies

[project.optional-dependencies]
# Development dependencies for contributors
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/DiggingNebula8/bobreview"
Documentation = "https://github.com/DiggingNebula8/bobreview/blob/main/README.md"
Repository = "https://github.com/DiggingNebula8/bobreview"
"Bug Tracker" = "https://github.com/DiggingNebula8/bobreview/issues"

[project.scripts]
bobreview = "bobreview.cli:main"

[tool.setuptools]
# Core packages (explicitly listed)
packages = [
    "bobreview",
    "bobreview.core",
    "bobreview.llm",
    "bobreview.llm.providers",
    "bobreview.plugins",
    "bobreview.plugins.registries",
    "bobreview.services",
    "bobreview.report_systems",
    "bobreview.pages",
    # Plugins (auto-discovered)
    { find = { where = ".", include = ["bobreview.plugins.*"], exclude = ["bobreview.plugins.registries", "bobreview.plugins"] } }
]

[tool.setuptools.package-data]
bobreview = [
    "py.typed",
    "pages/styles.css",
    "report_systems/builtin/*.json",
    "report_systems/builtin/*.md",
    "templates/**/*.j2",
]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

