[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bobreview"
version = "1.0.9"
description = "Performance Analysis and Review Tool for Game Development"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["performance", "analysis", "game", "development", "profiling", "reports"]
authors = [
    {name = "Siva Vadlamani"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["dependencies"]

# Dependencies are read from requirements.txt by setup.py
# This is the single source of truth for all dependencies

[project.optional-dependencies]
# Development dependencies for contributors
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/DiggingNebula8/bobreview"
Documentation = "https://github.com/DiggingNebula8/bobreview/blob/main/README.md"
Repository = "https://github.com/DiggingNebula8/bobreview"
"Bug Tracker" = "https://github.com/DiggingNebula8/bobreview/issues"

[project.scripts]
bobreview = "bobreview.cli:main"

[tool.setuptools]
# Packages are managed in setup.py: explicit core packages + auto-discovered plugins

[tool.setuptools.package-data]
bobreview = [
    "py.typed",
    "core/static/styles.css",
    "core/plugin_system/scaffolder/templates/*.yaml",
    "core/plugin_system/scaffolder/templates/static/*.css",
]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

